--- a/css/style.css
+++ b/css/style.css
@@ -124,13 +124,8 @@ h2 {
 
 /* NAV */
 
-.nav.active {
-  top: 0;
-}
-
 .nav-list {
   display: flex;
-  position: relative;
 }
 
 .nav-list-item {
@@ -730,56 +725,32 @@ h2 {
   .nav-list {
     transition: all 0.5s ease 0s;
     right: -100%;
-  }
-
-  /* .nav-list-item{
-    display: none;
-  } */
-
-
-  /* .nav.active{
-    transition: all 0.5s ease 0s;
-    left: 100%;
-  } */
-
-
-  .nav-list.active {
-    transition: all 0.5s ease 0s;
-    position: fixed;
     top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #181E23;
-    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+
     display: flex;
     flex-direction: column;
     align-items: baseline;
     justify-content: center;
     row-gap: 20px;
+  }
+
+
+  .nav-list.active {
+    transition: all 0.5s ease 0s;
+    right: 0;
+    background-color: #181E23;
+    z-index: 1;
     color: #FFFFFF;
-
-
-    /* animation-direction: alternate-reverse;
-    animation-duration: 0.5s;
-    animation-name: move; */
   }
 
   .nav-list.active .nav-list-item{
     display: block;
     transition: all 0.5s ease 0s;
   }
-
-
-  /* @keyframes move {
-    from {
-      margin-left: -100px;
-    }
-
-    to {
-      margin-left: 900px;
-    }
-  } */
 
 
   .header-link {
